add reproducible training

--- a/notebooks/explore_dataset.ipynb
+++ b/notebooks/explore_dataset.ipynb
@@ -135,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 (default, May 17 2022, 19:42:15) \n[GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
