--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -11,12 +11,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Step 1. Load your evaluation result text file\n",
-    "  * Note that every text file has the same format so the following code should work for all baselines' results.\n",
-    "    * The exact format is `CLASS_LABEL: NORM_DIST` for each selected object id."
+    "def load_table(path):\n",
+    "    # Format is 'CLASS: DIST'\n",
+    "    data = pd.read_csv(path, sep=\": \", header=None)\n",
+    "    data.columns = [\"Class\", \"Dist\"]\n",
+    "    data = data[data['Dist'] != \"False\"]\n",
+    "    data['Dist'] = pd.to_numeric(data['Dist'], errors='coerce')\n",
+    "    \n",
+    "    meta = data.groupby('Class').mean().reset_index()\n",
+    "    meta = meta.set_index('Class')\n",
+    "    meta['Dist'] = meta['Dist'].apply(lambda x: round(x, 2))\n",
+    "    meta.loc[\"class_mean\"] = meta.mean()\n",
+    "    meta.loc[\"unweighted_mean\"] = data.mean(numeric_only=True)\n",
+    "    \n",
+    "    return meta"
    ]
   },
   {
@@ -24,13 +37,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "data = pd.read_csv('../umpmetric_gtflow_unseen_res.txt', sep=\": \", header=None)\n",
-    "data.columns = [\"Class\", \"Dist\"]\n",
-    "data = data[data['Dist'] != \"False\"]\n",
-    "data['Dist'] = pd.to_numeric(data['Dist'], errors='coerce')\n",
-    "data.head(5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -46,10 +53,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = data.groupby('Class').mean().reset_index()\n",
-    "meta['Dist'] = meta['Dist'].apply(lambda x: round(x, 2))\n",
-    "meta"
+    "t1 = load_table('../umpmetric_results_master/flowbot_mask_novpa_redo/train_test_res.txt')\n",
+    "t1.T"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = load_table('../umpmetric_results_master/flowbot_mask_novpa_redo_v2/train_test_res.txt')\n",
+    "t2.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
