refactor the distributed stuff into its own file

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -72,6 +72,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t2 = load_table('../umpmetric_results_master/flowbot_reproducibility_1/train_test_res.txt')\n",
+    "t2.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = load_table('../umpmetric_results_master/flowbot_reproducibility_2/train_test_res.txt')\n",
+    "t2.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
