cut eval time down to like, 10min

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -92,6 +92,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t3 = load_table('../umpmetric_results_master/flowbot_reproducibility_3/train_test_res.txt')\n",
+    "t3.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t4 = load_table('../umpmetric_results_master/flowbot_reproducibility_4/train_test_res.txt')\n",
+    "t4.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t5 = load_table('../umpmetric_results_master/flowbot_dumb_demo8/train_test_res.txt')\n",
+    "t5.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
