works with refactor

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -122,6 +122,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t6 = load_table('../umpmetric_results_master/flowbot_refactor_make_sure/train_test_res.txt')\n",
+    "t6.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
