forgot to add wrappers

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -132,6 +132,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t7 = load_table('../umpmetric_results_master/flowbot_refactor_make_sure2/train_test_res.txt')\n",
+    "t7.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
