got the gt flow baseline going

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -22,6 +22,7 @@
     "    data.columns = [\"Class\", \"Dist\"]\n",
     "    data = data[data['Dist'] != \"False\"]\n",
     "    data['Dist'] = pd.to_numeric(data['Dist'], errors='coerce')\n",
+    "    data['Succ'] = data['Dist'] < 0.1\n",
     "    \n",
     "    meta = data.groupby('Class').mean().reset_index()\n",
     "    meta = meta.set_index('Class')\n",
@@ -135,6 +136,16 @@
    "source": [
     "t7 = load_table('../umpmetric_results_master/flowbot_refactor_make_sure2/train_test_res.txt')\n",
     "t7.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t8 = load_table('../umpmetric_results_master/gt_flow_full_eval_1/train_test_res.txt')\n",
+    "t8.T"
    ]
   },
   {
