good number of agents working

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -153,6 +153,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t8 = load_table('../umpmetric_gtflow_unseen_res._BACKUPtxt')\n",
+    "t8.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
