rename to match paper

--- a/notebooks/flowbot_predictions.ipynb
+++ b/notebooks/flowbot_predictions.ipynb
@@ -36,7 +36,7 @@
     "import rpad.partnet_mobility_utils.dataset as rpd\n",
     "\n",
     "import flowbot3d.tg_dataset as ftd\n",
-    "import flowbot3d.models.flowbot3d as fmf"
+    "import flowbot3d.models.artflownet as fmf"
    ]
   },
   {
