--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -64,6 +64,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "load_table('../results/sapien_evals/gt_flow_full_test/train_test/results.txt').T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
