make the typing work

--- a/notebooks/calc_eval_res.ipynb
+++ b/notebooks/calc_eval_res.ipynb
@@ -73,6 +73,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "load_table('../results/sapien_evals/umpnet_full_test/train_test/results.txt').T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
